# voice_assistant

./: .gitignore  README.md  pyproject.toml
src/: audio.py  config.py  main.py
