[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "python-dotenv>=1.1.0",
    "sounddevice>=0.5.2",
    "websockets>=15.0.1",
]

[tool.mypy]
ignore_missing_imports = true
